--- a/playbook.yml
+++ b/playbook.yml
@@ -26,7 +26,7 @@
         state: present
 
     - name: Install Ubuntu desktop environment
-      command: tasksel install ubuntu-desktop
+      command: tasksel install xubuntu-desktop
       become: yes
 
     - name: Setting Chrome Remote Desktop session to use Gnome
