--- a/playbook.yml
+++ b/playbook.yml
@@ -7,13 +7,15 @@
       apt:
         update_cache: yes
 
-    - name: Install wget and tasksel
+    - name: Install wget, tasksel, and python3
       apt:
         name: "{{ item }}"
         state: present
       with_items:
         - wget
         - tasksel
+        - python3
+        - python3-pip
 
     - name: Download Debian Linux Chrome Remote Desktop installation package
       get_url:
@@ -41,3 +43,4 @@
         msg: "Reboot initiated by Ansible to complete the setup"
         pre_reboot_delay: 30
         post_reboot_delay: 60
+
