--- a/playbook.yml
+++ b/playbook.yml
@@ -40,7 +40,5 @@
 
     - name: Reboot your Ubuntu VM instance
       reboot:
-        msg: "Reboot initiated by Ansible to complete the setup"
-        pre_reboot_delay: 30
-        post_reboot_delay: 60
+        msg: "Reboot initiated by Ansible-container"
 
