--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 # Inventory file path
-inventory      = /var/lib/jenkins/inventory/inventory.yaml
+inventory      = /var/lib/jenkins/inventory/inventory.yml
 
 remote_user = root
 host_key_checking = False
