--- a/ansible/gcp.yaml
+++ b/ansible/gcp.yaml
@@ -3,8 +3,9 @@ plugin: gcp_compute
 projects:
   - sumanth-97
 auth_kind: serviceaccount
-service_account_file: ./ansible/service-account.json
+service_account_file: /var/lib/jenkins/workspace/desktop/ansible/service-account.json
 groups:
   jenkins: "'jenkins' in name"
   desktop: "'desktop' in name"
   tomcat: "'tomcat' in name"
+
