--- a/ansible/roles/desktop/tasks/main.yaml
+++ b/ansible/roles/desktop/tasks/main.yaml
@@ -1,1 +1,12 @@
-
+---
+- name: Update package
+  apt:
+    update_cache: yes
+    when: operation == 'apply'
+    notify:
+            - Install wget, tasksel, and python3
+            - Download Debian Linux Chrome Remote Desktop installation package
+            - Install the Debian Linux Chrome Remote Desktop installation package
+            - Install Ubuntu desktop environment
+            - Setting Chrome Remote Desktop session to use Gnome
+            - Reboot your Ubuntu VM instance
