--- a/ansible/roles/desktop/handlers/main.yaml
+++ b/ansible/roles/desktop/handlers/main.yaml
@@ -1,1 +1,33 @@
+---
+- name: Install wget, tasksel, and python3
+  apt:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - wget
+    - tasksel
+    - python3
+    - python3-pip
 
+- name: Download Debian Linux Chrome Remote Desktop installation package
+  get_url:
+    url: https://dl.google.com/linux/direct/chrome-remote-desktop_current_amd64.deb
+    dest: /tmp/chrome-remote-desktop_current_amd64.deb
+
+- name: Install the Debian Linux Chrome Remote Desktop installation package
+  apt:
+    deb: /tmp/chrome-remote-desktop_current_amd64.deb
+    state: present
+
+- name: Install Ubuntu desktop environment
+  shell: DEBIAN_FRONTEND=noninteractive tasksel install ubuntu-desktop
+
+- name: Setting Chrome Remote Desktop session to use Gnome
+  copy:
+    dest: /etc/chrome-remote-desktop-session
+    content: |
+      exec /etc/X11/Xsession /usr/bin/gnome-session
+
+- name: Reboot your Ubuntu VM instance
+  reboot:
+    msg: "Reboot initiated by Ansible playbook"
