--- a/ansible/roles/desktop/handlers/main.yaml
+++ b/ansible/roles/desktop/handlers/main.yaml
@@ -31,3 +31,19 @@
 - name: Reboot your Ubuntu VM instance
   reboot:
     msg: "Reboot initiated by Ansible playbook"
+
+- name: Remove Chrome Remote Desktop package
+  apt:
+    name: chrome-remote-desktop
+    state: absent
+
+- name: Remove Ubuntu desktop environment
+  apt:
+    name: ubuntu-desktop
+    state: absent
+    autoremove: yes
+
+- name: Clean up temporary files
+  file:
+    path: /tmp/chrome-remote-desktop_current_amd64.deb
+    state: absent
