--- a/ansible/Jenkinsfile
+++ b/ansible/Jenkinsfile
@@ -1,3 +1,5 @@
+NOTE: Parameters to be given "target_hosts[---, desktop, tomcat]", "tfm_action[apply, destroy, ansible]", "ansible_action[---,apply, destroy]"
+==============================================
 pipeline {
     agent {
         label 'docker'
@@ -8,10 +10,10 @@ pipeline {
                 git branch: 'main', url: 'https://github.com/summu97/ASSESMENT.git'
             }
         }
-        stage('Desktop-tfm-init') {
+        stage('tfm-init') {
             when {
                 expression {
-                    return action == 'apply' || action == 'destroy'
+                    return tfm_action == 'apply' || tfm_action == 'destroy'
                 }
             }
             steps {
@@ -21,10 +23,10 @@ pipeline {
                 '''
             }
         }
-        stage('Desktop-tfm-plan') {
+        stage('tfm-plan') {
             when {
                 expression {
-                    return action == 'apply' || action == 'destroy'
+                    return tfm_action == 'apply'
                 }
             }
             steps {
@@ -34,41 +36,37 @@ pipeline {
                 '''
             }
         }
-        stage('Desktop-tfm-action') {
+        stage('tfm-action') {
             when {
                 expression {
-                    return action == 'apply' || action == 'destroy'
+                    return tfm_action == 'apply' || tfm_action == 'destroy'
                 }
             }
             steps {
                 sh '''
                 cd /var/lib/jenkins/workspace/desktop/terraform-desktop
-                terraform $action --auto-approve
+                terraform $tfm_action --auto-approve
                 '''
             }
         }
-        stage('Copying ansible.cfg') {
+        stage('ansible.cfg') {
             when {
                 expression {
-                    return action == 'ansible'
+                    return tfm_action == 'ansible'
                 }
             }
             steps {
                 sh 'cat ./ansible/ansible.cfg | sudo tee /etc/ansible/ansible.cfg'
                 }
         }
-        stage('Test connectivity') {
-            when {
+        stage('Playbook execution'){
+             when {
                 expression {
-                    return action == 'ansible'
+                    return tfm_action == 'ansible'
                 }
             }
             steps {
-                sh '''
-                chmod -R 755 ansible
-                cd ansible
-                ansible-inventory --graph
-                '''
+                sh 'ansible-playbook -e "target_hosts=$target_hosts" -e "operation=$ansible_action" ansible/master.yaml'
             }
         }
     }
