--- a/ansible/Jenkinsfile
+++ b/ansible/Jenkinsfile
@@ -59,10 +59,20 @@ pipeline {
                 sh 'cat ./ansible/ansible.cfg | sudo tee /etc/ansible/ansible.cfg'
                 }
         }
-        stage('Playbook execution'){
+        stage('ansible-playbook-apply'){
              when {
                 expression {
-                    return tfm_action == 'ansible'
+                    return tfm_action == 'ansible' && ansible_action == 'apply'
+                }
+            }
+            steps {
+                sh 'ansible-playbook -e "target_hosts=$target_hosts" -e "operation=$ansible_action" ansible/master.yaml'
+            }
+        }
+        stage('ansible-playbook-destroy'){
+             when {
+                expression {
+                    return tfm_action == 'ansible' && ansible_action == 'destroy'
                 }
             }
             steps {
