--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -5,3 +5,4 @@ inventory      = /var/lib/jenkins/workspace/desktop/ansible/gcp.yaml
 remote_user = root
 host_key_checking = False
 private_key_file = /var/lib/jenkins/.ssh/id_rsa
+ansible_python_interpreter = /usr/bin/python3
