--- a/ansible/roles/apache2/tasks/main.yaml
+++ b/ansible/roles/apache2/tasks/main.yaml
@@ -11,10 +11,10 @@
   when: operation == 'destroy'
   
   
-- handlers:
+handlers:
 
-        - name: Install apache2
-          apt: name=apache2 state=present
+      - name: Install apache2
+        apt: name=apache2 state=present
 
-        - name: Print message
-          command: echo "<html><body><h1>Hello World</h1></body></html>" | sudo tee /var/www/html/index.html
+      - name: Print message
+        command: echo "<html><body><h1>Hello World</h1></body></html>" | sudo tee /var/www/html/index.html
