--- a/ansible/roles/apache2/tasks/main.yaml
+++ b/ansible/roles/apache2/tasks/main.yaml
@@ -16,7 +16,7 @@
   copy:
     content: |
       with open('/var/www/html/index.html', 'w') as f:
-          f.write('<html><centre><h1>Hello, world!</h1></centre></html>\n')
+          f.write('<html><h1>Hello, world!</h1></html>\n')
     dest: /root/file.py
   when: operation == 'apply'
 
